--- a/Dockerfile-Alpine
+++ b/Dockerfile-Alpine
@@ -72,6 +72,7 @@ RUN apk add --no-cache --update \
     git \
     curl \
     bash \
+    nodejs-npm \
     postgresql-dev \
     libjpeg-turbo-dev \
     musl-dev \
