--- a/Dockerfile-Alpine
+++ b/Dockerfile-Alpine
@@ -11,6 +11,7 @@ MAINTAINER Fernando Ribeiro <fernando.ribeiro@geocrafter.eu>
 # Install basic applications
 RUN apk add --no-cache --update \
     gcc \
+    make \
     git \
     curl \
     bash \
@@ -50,6 +51,9 @@ RUN mkdir static \
     && rm -rf /var/cache/apk/*
 
 VOLUME /api/static
+
+# Copy .env file
+COPY ./src/.env /platform/src/.env
 
 # Expose ports
 EXPOSE 8010
